--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Add favicon link here -->
+    <link rel="icon" href="/logo.png" type="image/x-icon" />
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@6.8.4/swiper-bundle.min.css"
